// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createEventResourceTemplate should add events with ORD Extension "visibility=public" 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "yes",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:MyService:v2",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v2/MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "short description for test MyService event",
  "title": "This is test MyService event title",
  "version": "2.0.0",
  "visibility": "public",
}
`;

exports[`createEventResourceTemplate should create event resource template correctly 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "MyService event resource",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`createEventResourceTemplate should create event resource template correctly with packageIds including namespace 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "MyService event resource",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`createEventResourceTemplate should include internal events but ensure they appear in a separate package 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "yes",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:MyService:v2",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v2/MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "short description for test MyService event",
  "title": "This is test MyService event title",
  "version": "2.0.0",
  "visibility": "internal",
}
`;

exports[`createEventResourceTemplate should not strip a different local namespace 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:other.namespace.MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:other.namespace.MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:other.namespace.MyService:v1/other.namespace.MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "other.namespace.MyService event resource",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`createEventResourceTemplate should strip application namespace from local namespace 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:nested.MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:nested.MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:nested.MyService:v1/customer.testNamespace.nested.MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "customer.testNamespace.nested.MyService event resource",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`createEventResourceTemplate should strip application namespace if its the same as local namespace 1`] = `
{
  "description": "CAP Event resource describing events / messages.",
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "ordId": "customer.testNamespace:eventResource:MyService:v1",
  "partOfGroups": [
    "sap.cds:service:customer.testNamespace:MyService",
  ],
  "partOfPackage": "customer.testNamespace:package:testAppName:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": [
        {
          "type": "open",
        },
      ],
      "mediaType": "application/json",
      "type": "asyncapi-v2",
      "url": "/ord/v1/customer.testNamespace:eventResource:MyService:v1/customer.testNamespace.MyService.asyncapi2.json",
    },
  ],
  "shortDescription": "customer.testNamespace.MyService event resource",
  "title": "ODM testAppName Events",
  "version": "1.0.0",
  "visibility": "public",
}
`;
